--- a/index.html
+++ b/index.html
@@ -169,8 +169,8 @@ window.onclick = function(event) {
 		<p>Мы вещаем разные телепередачи, короткометражные фильмы, шоу и ведём прямые эфиры с разных мероприятий!</p>
 	</div>
 <div class="title">
-	<a href="https://vk.com/rayka_and_layka_new"><i class="demo-icon icon-link-ext">&#xf08e;</i>Сообщество ВК</a><br>
-	<a href="https://yandex.ru/chat#/join/0e0da34c-6352-4b74-8963-4b8d612868df"><i class="demo-icon icon-link-ext">&#xf08e;</i>Канал в Яндекс Мессенджере</a>
+	<a href="https://vk.com/rayka_and_layka_new" target="_blank"><i class="demo-icon icon-link-ext">&#xf08e;</i>Сообщество ВК</a><br>
+	<a href="https://yandex.ru/chat#/join/0e0da34c-6352-4b74-8963-4b8d612868df" target="_blank"><i class="demo-icon icon-link-ext">&#xf08e;</i>Канал в Яндекс Мессенджере</a>
 	<br>
 </div>
 <div class="rabota">
