--- a/livetv.html
+++ b/livetv.html
@@ -230,7 +230,7 @@ window.onclick = function(event) {
         <p>19:40:</p>
         <p>- Страйдер 2 (18+)</p>
         <p>20:50:</p>
-        <p>Там, где горы встречаются с морем <mark>По пятницам</mark></p>
+        <p>Там, где горы встречаются с морем</p>
         <p>21:30:</p>
         <p>- "ВЕЛОМАРШРУТ" - Некрасовка, Косино-Ухтомский, Новокосино</p>
         <p>22:05:</p>
