--- a/livetv.html
+++ b/livetv.html
@@ -186,62 +186,12 @@ window.onclick = function(event) {
           <iframe src="https://vk.com/video_ext.php?oid=-214689242&id=456239083&hd=1&autoplay=1" width="640" height="360" allow="encrypted-media; fullscreen; picture-in-picture; screen-wake-lock;" frameborder="0" allowfullscreen></iframe>
      </div>
      <div class="title1">
-        <b>Расписание на 23.07.2025</b>
-        <p>8:00:</p>
-        <p>- Неудачные дубли телепередачи "ВЕЛОМАРШРУТ"</p>
-        <p>8:02:</p>
+        <b>Расписание на 24.07.2025</b>  
+        <p>9:00:</p>
+        <p>- Дом забытых вещей</p>
+        <p>9:15:</p>
         <p>- "ВЕЛОМАРШРУТ" - Некрасовка, Косино-Ухтомский, Новокосино</p>
-        <p>С 8:20:</p>
-        <p>- Фильм "Чудеса случаются"</p>
-        <p>- Короткометражный фильм "Страйдер" (18+)</p>
-        <p>- "Импульс - шаг в будущее"</p>
-        <p>- Короткометражный фильм "Беседа"</p>
-        <p>- Короткометражный фильм "Скейт"</p>
-        <p>9:45:</p>
-        <p>- К/Ф "ЭГО"</p>
-        <p>10:10:</p>
-        <p>- "ВЕЛОМАРШРУТ" - Некрасовка, Косино-Ухтомский, Новокосино</p>
-        <p>10:25:</p>
-        <p>- Дом забытых вещей</p>
-        <p>10:35:</p>
-        <p>- К/Ф "Карачун"</p>
-        <p>11:15:</p>
-        <p>Продолжение вещания</p>
-        <p>11:40:</p>
-        <p>- Дом забытых вещей</p>
-        <p>12:40:</p>
-        <p>- Чудеса случаются</p>
-        <p>14:25:</p>
-        <p>- Страйдер (18+)</p>
-        <p>14:35:</p>
-        <p>- Страйдер 2 (18+)</p>
-        <p>14:45:</p>
-        <p>- Семейная связь</p>
-        <p>16:40:</p>
-        <p>- Дом забытых вещей</p>
-        <p>16:55:</p>
-        <p>- Там, где горы встречаются с морем</p>
-        <p>17:30:</p>
-        <p>Продолжение вещания</p>
-        <p>18:35:</p>
-        <p>- Импульс - шаг в будущее</p>
-        <p>19:30:</p>
-        <p>- Страйдер (18+)</p>
-        <p>19:40:</p>
-        <p>- Страйдер 2 (18+)</p>
-        <p>20:50:</p>
-        <p>Там, где горы встречаются с морем</p>
-        <p>21:30:</p>
-        <p>- "ВЕЛОМАРШРУТ" - Некрасовка, Косино-Ухтомский, Новокосино</p>
-        <p>22:05:</p>
-        <p>- Дом забытых вещей</p>
-        <p>22:15:</p>
-        <p>Продолжение вещания</p>  
-        <!-- <p>10:00:</p>
-        <p>- Дом забытых вещей</p>
-        <p>10:15:</p>
-        <p>- "ВЕЛОМАРШРУТ" - Некрасовка, Косино-Ухтомский, Новокосино</p>
-        <p>10:35:</p>
+        <p>9:35:</p>
         <p>- К/ф "Черепаха"</p>
         <p>С 11:00:</p>
         <p>- Фильм "Чудеса случаются"</p>
@@ -250,46 +200,45 @@ window.onclick = function(event) {
         <p>- "Импульс - шаг в будущее"</p>
         <p>- Короткометражный фильм "Беседа"</p>
         <p>- Короткометражный фильм "Скейт"</p>
-        <p>12:25:</p>
+        <p>11:25:</p>
         <p>- К/Ф "ЭГО"</p>
-        <p>12:45:</p>
+        <p>11:45:</p>
         <p>- "ВЕЛОМАРШРУТ" - Некрасовка, Косино-Ухтомский, Новокосино</p>
-        <p>13:00:</p>
+        <p>12:00:</p>
         <p>- К/Ф "Карачун"</p>
-        <p>13:25:</p>
+        <p>12:25:</p>
         <p>- Дом забытых вещей</p>
-        <p>С 13:40:</p>
+        <p>С 12:40:</p>
         <p>- Фильм "Чудеса случаются"</p>
         <p>- Короткометражный фильм "Страйдер"</p>
         <p>- Короткометражный фильм "Семейная связь"</p>
         <p>- "Импульс - шаг в будущее"</p>
         <p>- Короткометражный фильм "Беседа"</p>
         <p>- Короткометражный фильм "Скейт"</p>
-        <p>15:25:</p>
+        <p>14:25:</p>
         <p>- Семейная связь</p>
-        <p>16:15:</p>
+        <p>15:15:</p>
         <p>- К/ф "Черепаха"</p>
-        <p>18:15:</p>
+        <p>17:15:</p>
         <p>- К/Ф "ЭГО"</p>
-        <p>18:40:</p>
+        <p>17:40:</p>
         <p>- "ВЕЛОМАРШРУТ" - Некрасовка, Косино-Ухтомский, Новокосино</p>
-        <p>19:00:</p>
+        <p>18:00:</p>
         <p>- К/Ф "Карачун"</p>
-        <p>19:20:</p>
+        <p>18:20:</p>
         <p>- Дом забытых вещей</p>
-        <p>19:35:</p>
+        <p>18:35:</p>
         <p>- К/ф "Черепаха"</p>
-        <p>С 20:00:</p>
+        <p>С 19:00:</p>
         <p>Продолжение вещания</p>
-        <p>22:10:</p>
+        <p>21:10:</p>
         <p>- Дом забытых вещей</p>
-        <p>23:50:</p>
-        <p>- К/ф "Беседа"</p><br>
-        <b>Расписание на 23.07.2025</b>
-        <p>00:36:</p>
+        <p>22:50:</p>
+        <p>- К/ф "Беседа"</p>
+        <p>23:36:</p>
         <p>- "ВЕЛОМАРШРУТ" - Некрасовка, Косино-Ухтомский, Новокосино</p>
-        <p>00:55:</p>
-        <p>Перерыв вещания</p> -->
+        <p>23:55:</p>
+        <p>Перерыв вещания</p>
 
    </div>
 </div>
