--- a/index.html
+++ b/index.html
@@ -191,59 +191,57 @@ window.onclick = function(event) {
 
 </div>
 <div class="title1">
-        <b>Расписание на 24.07.2025</b>  
+        <b>Расписание на 25.07.2025</b>  
         <p>9:00:</p>
-        <p>- Дом забытых вещей</p>
-        <p>9:15:</p>
+        <p>- Неудачные дубли телепередачи "ВЕЛОМАРШРУТ"</p>
+        <p>9:02:</p>
         <p>- "ВЕЛОМАРШРУТ" - Некрасовка, Косино-Ухтомский, Новокосино</p>
-        <p>9:35:</p>
-        <p>- К/ф "Черепаха"</p>
-        <p>С 11:00:</p>
+        <p>С 9:20:</p>
         <p>- Фильм "Чудеса случаются"</p>
-        <p>- Короткометражный фильм "Страйдер"</p>
-        <p>- Короткометражный фильм "Семейная связь"</p>
+        <p>- Короткометражный фильм "Страйдер" (18+)</p>
         <p>- "Импульс - шаг в будущее"</p>
         <p>- Короткометражный фильм "Беседа"</p>
         <p>- Короткометражный фильм "Скейт"</p>
+        <p>10:45:</p>
+        <p>- К/Ф "ЭГО"</p>
+        <p>11:10:</p>
+        <p>- "ВЕЛОМАРШРУТ" - Некрасовка, Косино-Ухтомский, Новокосино</p>
         <p>11:25:</p>
-        <p>- К/Ф "ЭГО"</p>
-        <p>11:45:</p>
-        <p>- "ВЕЛОМАРШРУТ" - Некрасовка, Косино-Ухтомский, Новокосино</p>
-        <p>12:00:</p>
-        <p>- К/Ф "Карачун"</p>
-        <p>12:25:</p>
         <p>- Дом забытых вещей</p>
-        <p>С 12:40:</p>
-        <p>- Фильм "Чудеса случаются"</p>
-        <p>- Короткометражный фильм "Страйдер"</p>
-        <p>- Короткометражный фильм "Семейная связь"</p>
-        <p>- "Импульс - шаг в будущее"</p>
-        <p>- Короткометражный фильм "Беседа"</p>
-        <p>- Короткометражный фильм "Скейт"</p>
-        <p>14:25:</p>
-        <p>- Семейная связь</p>
-        <p>15:15:</p>
-        <p>- К/ф "Черепаха"</p>
-        <p>17:15:</p>
-        <p>- К/Ф "ЭГО"</p>
-        <p>17:40:</p>
-        <p>- "ВЕЛОМАРШРУТ" - Некрасовка, Косино-Ухтомский, Новокосино</p>
-        <p>18:00:</p>
+        <p>11:35:</p>
         <p>- К/Ф "Карачун"</p>
-        <p>18:20:</p>
-        <p>- Дом забытых вещей</p>
-        <p>18:35:</p>
-        <p>- К/ф "Черепаха"</p>
-        <p>С 19:00:</p>
+        <p>12:15:</p>
         <p>Продолжение вещания</p>
-        <p>21:10:</p>
+        <p>12:40:</p>
         <p>- Дом забытых вещей</p>
-        <p>22:50:</p>
-        <p>- К/ф "Беседа"</p>
-        <p>23:36:</p>
+        <p>13:40:</p>
+        <p>- Чудеса случаются</p>
+        <p>15:25:</p>
+        <p>- Страйдер (18+)</p>
+        <p>15:35:</p>
+        <p>- Страйдер 2 (18+)</p>
+        <p>15:45:</p>
+        <p>- Семейная связь</p>
+        <p>17:40:</p>
+        <p>- Дом забытых вещей</p>
+        <p>17:55:</p>
+        <p>- Там, где горы встречаются с морем</p>
+        <p>18:30:</p>
+        <p>Продолжение вещания</p>
+        <p>19:35:</p>
+        <p>- Импульс - шаг в будущее</p>
+        <p>20:30:</p>
+        <p>- Страйдер (18+)</p>
+        <p>20:40:</p>
+        <p>- Страйдер 2 (18+)</p>
+        <p>21:50:</p>
+        <p>Там, где горы встречаются с морем <mark>По пятницам</mark></p>
+        <p>22:30:</p>
         <p>- "ВЕЛОМАРШРУТ" - Некрасовка, Косино-Ухтомский, Новокосино</p>
-        <p>23:55:</p>
-        <p>Перерыв вещания</p>
+        <p>23:05:</p>
+        <p>- Дом забытых вещей</p>
+        <p>23:15:</p>
+        <p>Продолжение вещания</p>
 
 
 
