--- a/index.html
+++ b/index.html
@@ -191,58 +191,57 @@ window.onclick = function(event) {
 
 </div>
 <div class="title1">
-        <b>Расписание на 30.07.2025</b>
-        <p>10:00:</p>
+        <b>Расписание на 01.08.2025</b>
+        <p>9:00:</p>
         <p>- Неудачные дубли телепередачи "ВЕЛОМАРШРУТ"</p>
-        <p>10:02:</p>
+        <p>9:02:</p>
         <p>- "ВЕЛОМАРШРУТ" - Некрасовка, Косино-Ухтомский, Новокосино</p>
-        <p>С 10:20:</p>
+        <p>С 9:20:</p>
         <p>- Фильм "Чудеса случаются"</p>
         <p>- Короткометражный фильм "Страйдер" (18+)</p>
         <p>- "Импульс - шаг в будущее"</p>
         <p>- Короткометражный фильм "Беседа"</p>
         <p>- Короткометражный фильм "Скейт"</p>
-        <p>11:45:</p>
+        <p>10:45:</p>
         <p>- К/Ф "ЭГО"</p>
-        <p>12:10:</p>
+        <p>11:10:</p>
         <p>- "ВЕЛОМАРШРУТ" - Некрасовка, Косино-Ухтомский, Новокосино</p>
-        <p>12:25:</p>
+        <p>11:25:</p>
         <p>- Дом забытых вещей</p>
-        <p>12:35:</p>
+        <p>11:35:</p>
         <p>- К/Ф "Карачун"</p>
-        <p>13:15:</p>
+        <p>12:15:</p>
         <p>Продолжение вещания</p>
-        <p>13:40:</p>
-        <p>- Дом забытых вещей</p>
         <p>12:40:</p>
+        <p>- Дом забытых вещей</p>
+        <p>13:40:</p>
         <p>- Чудеса случаются</p>
-        <p>16:25:</p>
+        <p>15:25:</p>
         <p>- Страйдер (18+)</p>
-        <p>16:35:</p>
+        <p>15:35:</p>
         <p>- Страйдер 2 (18+)</p>
-        <p>16:45:</p>
+        <p>15:45:</p>
         <p>- Семейная связь</p>
-        <p>18:40:</p>
+        <p>17:40:</p>
         <p>- Дом забытых вещей</p>
-        <p>18:55:</p>
+        <p>17:55:</p>
         <p>- Там, где горы встречаются с морем</p>
-        <p>19:30:</p>
+        <p>18:30:</p>
         <p>Продолжение вещания</p>
-        <p>20:35:</p>
+        <p>19:35:</p>
         <p>- Импульс - шаг в будущее</p>
-        <p>21:30:</p>
+        <p>20:30:</p>
         <p>- Страйдер (18+)</p>
-        <p>21:40:</p>
+        <p>20:40:</p>
         <p>- Страйдер 2 (18+)</p>
-        <p>22:50:</p>
-        <p>Там, где горы встречаются с морем</p>
-        <p>23:30:</p>
-        <p>- "ВЕЛОМАРШРУТ" - Некрасовка, Косино-Ухтомский, Новокосино</p><br>
-        <b>Расписание на 31.07.2025</b>
-        <p>00:05:</p>
+        <p>21:50:</p>
+        <p>Там, где горы встречаются с морем <mark>По пятницам</mark></p>
+        <p>22:30:</p>
+        <p>- "ВЕЛОМАРШРУТ" - Некрасовка, Косино-Ухтомский, Новокосино</p>
+        <p>23:05:</p>
         <p>- Дом забытых вещей</p>
-        <p>00:15:</p>
-        <p>Перерыв вещания</p> 
+        <p>23:15:</p>
+        <p>Продолжение вещания</p>
 
 
 
