--- a/Temat.html
+++ b/Temat.html
@@ -182,7 +182,7 @@ window.onclick = function(event) {
 <div class="program-list">
     <!-- Карточка передачи 1 -->
     <div class="program-card">
-        <div class="program-tag">Новый эпизод</div>
+        <!-- <div class="program-tag">Новый эпизод</div> -->
         <img src="/theme/images/Dom.png" alt="Тематические" class="program-image">
         <div class="program-info">
             <h3 class="program-title">Дом забытых вещей</h3>
