--- a/tele-video.html
+++ b/tele-video.html
@@ -181,7 +181,7 @@ window.onclick = function(event) {
 
 <div class="trenn1">
      <a class='tnn1' href='/VELOMARSHRUT' style='background-image: url("/theme/images/Velomarshrut.png")'><p>ВЕЛОМАРШРУТ</p></a>
-     <a class='tnn1' href='/Temat' style='background-image: url("/theme/images/Temat.png")'><div class="program-tag">НОВЫЙ ЭПИЗОД</div><p>Тематические передачи</p>
+     <a class='tnn1' href='/Temat' style='background-image: url("/theme/images/Temat.png")'><!--<div class="program-tag">НОВЫЙ ЭПИЗОД</div>--><p>Тематические передачи</p>
      </a>
 </div>
 
