--- a/livetv.html
+++ b/livetv.html
@@ -186,8 +186,58 @@ window.onclick = function(event) {
           <iframe src="https://vk.com/video_ext.php?oid=-214689242&id=456239083&hd=1&autoplay=1" width="640" height="360" allow="encrypted-media; fullscreen; picture-in-picture; screen-wake-lock;" frameborder="0" allowfullscreen></iframe>
      </div>
      <div class="title1">
-        <b>Расписание на 12.08.2025</b>
-        <p>10:00:</p>
+        <b>Расписание на 13.08.2025</b>
+        <p>9:00:</p>
+        <p>- Неудачные дубли телепередачи "ВЕЛОМАРШРУТ"</p>
+        <p>9:02:</p>
+        <p>- "ВЕЛОМАРШРУТ" - Некрасовка, Косино-Ухтомский, Новокосино</p>
+        <p>С 9:20:</p>
+        <p>- Фильм "Чудеса случаются"</p>
+        <p>- Короткометражный фильм "Страйдер" (18+)</p>
+        <p>- "Импульс - шаг в будущее"</p>
+        <p>- Короткометражный фильм "Беседа"</p>
+        <p>- Короткометражный фильм "Скейт"</p>
+        <p>10:45:</p>
+        <p>- К/Ф "ЭГО"</p>
+        <p>11:10:</p>
+        <p>- "ВЕЛОМАРШРУТ" - Некрасовка, Косино-Ухтомский, Новокосино</p>
+        <p>11:25:</p>
+        <p>- Дом забытых вещей</p>
+        <p>11:35:</p>
+        <p>- К/Ф "Карачун"</p>
+        <p>12:15:</p>
+        <p>Продолжение вещания</p>
+        <p>12:40:</p>
+        <p>- Дом забытых вещей</p>
+        <p>13:40:</p>
+        <p>- Чудеса случаются</p>
+        <p>15:25:</p>
+        <p>- Страйдер (18+)</p>
+        <p>15:35:</p>
+        <p>- Страйдер 2 (18+)</p>
+        <p>15:45:</p>
+        <p>- Семейная связь</p>
+        <p>17:40:</p>
+        <p>- Дом забытых вещей</p>
+        <p>17:55:</p>
+        <p>- Там, где горы встречаются с морем</p>
+        <p>18:30:</p>
+        <p>Продолжение вещания</p>
+        <p>19:35:</p>
+        <p>- Импульс - шаг в будущее</p>
+        <p>20:30:</p>
+        <p>- Страйдер (18+)</p>
+        <p>20:40:</p>
+        <p>- Страйдер 2 (18+)</p>
+        <p>21:50:</p>
+        <p>Там, где горы встречаются с морем</p>
+        <p>22:30:</p>
+        <p>- "ВЕЛОМАРШРУТ" - Некрасовка, Косино-Ухтомский, Новокосино</p>
+        <p>23:05:</p>
+        <p>- Дом забытых вещей</p>
+        <p>23:15:</p>
+        <p>Продолжение вещания</p>
+        <!-- <p>10:00:</p>
         <p>- Дом забытых вещей</p>
         <p>10:15:</p>
         <p>- "ВЕЛОМАРШРУТ" - Некрасовка, Косино-Ухтомский, Новокосино</p>
@@ -239,7 +289,7 @@ window.onclick = function(event) {
         <p>00:45:</p>
         <p>- "ВЕЛОМАРШРУТ" - Некрасовка, Косино-Ухтомский, Новокосино</p>
         <p>00:55:</p>
-        <p>Перерыв вещания</p>
+        <p>Перерыв вещания</p> -->
 
    </div>
 </div>
