--- a/index.html
+++ b/index.html
@@ -177,9 +177,9 @@ window.onclick = function(event) {
 	<a class="rabota" href="/rabota"><p>Стать частью команды</p></a>
 </div>
 
-<!-- <div class="sob">
-              <a href="/strelka-pobeda"><img src="/theme/images/strelka.jpg"></a>
-         </div> -->
+<div class="sob">
+              <a href="/yauchastnik"><img src="/theme/images/KonkV.png"></a>
+         </div>
 
 <div class="title1">
 		<b>Прямой эфир</b><br>
