--- a/yauchastnik.html
+++ b/yauchastnik.html
@@ -191,7 +191,7 @@ window.onclick = function(event) {
         <p>Репетиция доступна в Театре на Авиамоторной в свободном доступе. В Люберецкий ДК будем приглашать в определённые дни и даты всех участников. Генеральная репетиция будет проведена накануне мероприятия</p>
         <p>📅21 августа в 17:00 по МСК. Вход для зрителей свободный.</p>
           <br>
-          <p>Выступдения не должны содержать:</p>
+          <p>Выступления не должны содержать:</p>
           <p>• Политику</p>
           <p>• Ненормативную лексику</p>
           <p>• Фишинг, мошенничество</p>
