--- a/livetv.html
+++ b/livetv.html
@@ -186,56 +186,8 @@ window.onclick = function(event) {
           <iframe src="https://vk.com/video_ext.php?oid=-214689242&id=456239083&hd=1&autoplay=1" width="640" height="360" allow="encrypted-media; fullscreen; picture-in-picture; screen-wake-lock;" frameborder="0" allowfullscreen></iframe>
      </div>
      <div class="title1">
-        <b>Расписание на 20.08.2025</b>
+        <b>Расписание на 21.08.2025</b>
         <p>10:00:</p>
-        <p>- "ВЕЛОМАРШРУТ" - Некрасовка, Косино-Ухтомский, Новокосино</p>
-        <p>10:20:</p>
-        <p>- К/ф "Черепаха"</p>
-        <p>С 10:45:</p>
-        <p>- Фильм "Чудеса случаются"</p>
-        <p>- Короткометражный фильм "Страйдер"</p>
-        <p>- Короткометражный фильм "Семейная связь"</p>
-        <p>- "Импульс - шаг в будущее"</p>
-        <p>- Короткометражный фильм "Беседа"</p>
-        <p>- Короткометражный фильм "Скейт"</p>
-        <p>12:00:</p>
-        <p>- Дом забытых вещей</p>
-        <p>12:10:</p>
-        <p>- К/Ф "Скейт"</p>
-        <p>12:25:</p>
-        <p>- К/Ф "ЭГО"</p>
-        <p>12:45:</p>
-        <p>- "ВЕЛОМАРШРУТ" - Некрасовка, Косино-Ухтомский, Новокосино</p>
-        <p>13:05:</p>
-        <p>- К/Ф "Карачун"</p>
-        <p>С 13:30:</p>
-        <p>- Фильм "Чудеса случаются"</p>
-        <p>- Короткометражный фильм "Страйдер"</p>
-        <p>- Короткометражный фильм "Семейная связь"</p>
-        <p>- "Импульс - шаг в будущее"</p>
-        <p>- Короткометражный фильм "Беседа"</p>
-        <p>- Короткометражный фильм "Скейт"</p>
-        <p>16:00:</p>
-        <p>- К/ф "Черепаха"</p>
-        <p>16:25:</p>
-        <p>- Дом забытых вещей</p>
-        <p>18:40:</p>
-        <p>- К/Ф "ЭГО"</p>
-        <p>19:00:</p>
-        <p>- "ВЕЛОМАРШРУТ" - Некрасовка, Косино-Ухтомский, Новокосино</p>
-        <p>19:20:</p>
-        <p>- К/Ф "Карачун"</p>
-        <p>19:45:</p>
-        <p>- Реальность полёта</p>
-        <p>20:30:</p>
-        <p>- К/ф "Черепаха"</p>
-        <p>С 20:50:</p>
-        <p>Продолжение вещания</p>
-        <p>21:45:</p>
-        <p>- Дом забытых вещей</p>
-        <p>22:20:</p>
-        <p>- К/ф "Семейная связь"</p>
-        <!-- <p>10:00:</p>
         <p>- Дом забытых вещей</p>
         <p>10:15:</p>
         <p>- "ВЕЛОМАРШРУТ" - Некрасовка, Косино-Ухтомский, Новокосино</p>
@@ -283,11 +235,11 @@ window.onclick = function(event) {
         <p>- Дом забытых вещей</p>
         <p>23:50:</p>
         <p>- К/ф "Беседа"</p>
-        <b>Расписание на 20.08.2025</b> 
+        <b>Расписание на 22.08.2025</b> 
         <p>00:45:</p>
         <p>- "ВЕЛОМАРШРУТ" - Некрасовка, Косино-Ухтомский, Новокосино</p>
         <p>00:55:</p>
-        <p>Перерыв вещания</p> -->
+        <p>Перерыв вещания</p>
 
    </div>
 </div>
