--- a/index.html
+++ b/index.html
@@ -191,45 +191,60 @@ window.onclick = function(event) {
 
 </div>
 <div class="title1">
-        <b>Расписание на 24.08.2025</b>
-        <p>12:00:</p>
+         <b>Расписание на 25.08.2025</b>
+        <p>10:00:</p>
         <p>- Дом забытых вещей</p>
-        <p>12:10:</p>
-        <p>- К/Ф "Скейт"</p>
-        <p>12:25:</p>
-        <p>- К/Ф "ЭГО"</p>
-        <p>12:45:</p>
+        <p>10:15:</p>
         <p>- "ВЕЛОМАРШРУТ" - Некрасовка, Косино-Ухтомский, Новокосино</p>
-        <p>13:05:</p>
-        <p>- К/Ф "Карачун"</p>
-        <p>С 13:30:</p>
+        <p>10:35:</p>
+        <p>- К/ф "Черепаха"</p>
+        <p>С 12:00:</p>
         <p>- Фильм "Чудеса случаются"</p>
         <p>- Короткометражный фильм "Страйдер"</p>
         <p>- Короткометражный фильм "Семейная связь"</p>
         <p>- "Импульс - шаг в будущее"</p>
         <p>- Короткометражный фильм "Беседа"</p>
         <p>- Короткометражный фильм "Скейт"</p>
-        <p>16:00:</p>
-        <p>- К/ф "Черепаха"</p>
-        <p>16:25:</p>
-        <p>- Дом забытых вещей</p>
-        <p>18:40:</p>
+        <p>12:25:</p>
         <p>- К/Ф "ЭГО"</p>
-        <p>19:00:</p>
+        <p>12:45:</p>
         <p>- "ВЕЛОМАРШРУТ" - Некрасовка, Косино-Ухтомский, Новокосино</p>
-        <p>19:20:</p>
+        <p>13:00:</p>
         <p>- К/Ф "Карачун"</p>
-        <p>19:45:</p>
-        <p>- Реальность полёта <mark>По воскресеньям</mark></p>
-        <p>20:30:</p>
-        <p>- К/ф "Черепаха"</p>
-        <p>С 20:50:</p>
-        <p>Продолжение вещания</p>
-        <p>21:45:</p>
+        <p>13:25:</p>
         <p>- Дом забытых вещей</p>
-        <p>22:20:</p>
-        <p>- К/ф "Семейная связь"</p>
-
+        <p>С 13:40:</p>
+        <p>- Фильм "Чудеса случаются"</p>
+        <p>- Короткометражный фильм "Страйдер"</p>
+        <p>- Короткометражный фильм "Семейная связь"</p>
+        <p>- "Импульс - шаг в будущее"</p>
+        <p>- Короткометражный фильм "Беседа"</p>
+        <p>- Короткометражный фильм "Скейт"</p>
+        <p>15:25:</p>
+        <p>- Семейная связь</p>
+        <p>16:15:</p>
+        <p>- К/ф "Черепаха"</p>
+        <p>18:15:</p>
+        <p>- К/Ф "ЭГО"</p>
+        <p>18:40:</p>
+        <p>- "ВЕЛОМАРШРУТ" - Некрасовка, Косино-Ухтомский, Новокосино</p>
+        <p>19:00:</p>
+        <p>- К/Ф "Карачун"</p>
+        <p>19:20:</p>
+        <p>- Дом забытых вещей</p>
+        <p>19:35:</p>
+        <p>- К/ф "Черепаха"</p>
+        <p>С 20:00:</p>
+        <p>Продолжение вещания</p>
+        <p>22:10:</p>
+        <p>- Дом забытых вещей</p>
+        <p>23:50:</p>
+        <p>- К/ф "Беседа"</p>
+        <b>Расписание на 26.08.2025</b> 
+        <p>00:45:</p>
+        <p>- "ВЕЛОМАРШРУТ" - Некрасовка, Косино-Ухтомский, Новокосино</p>
+        <p>00:55:</p>
+        <p>Перерыв вещания</p>
 
 
 
