--- a/index.html
+++ b/index.html
@@ -191,57 +191,60 @@ window.onclick = function(event) {
 
 </div>
 <div class="title1">
-         <b>Расписание на 27.08.2025</b>
-        <p>7:00:</p>
-        <p>- Неудачные дубли телепередачи "ВЕЛОМАРШРУТ"</p>
-        <p>7:02:</p>
+        <b>Расписание на 28.08.2025</b>
+        <p>10:00:</p>
+        <p>- Дом забытых вещей</p>
+        <p>10:15:</p>
         <p>- "ВЕЛОМАРШРУТ" - Некрасовка, Косино-Ухтомский, Новокосино</p>
-        <p>С 7:20:</p>
+        <p>10:35:</p>
+        <p>- К/ф "Черепаха"</p>
+        <p>С 12:00:</p>
         <p>- Фильм "Чудеса случаются"</p>
-        <p>- Короткометражный фильм "Страйдер" (18+)</p>
+        <p>- Короткометражный фильм "Страйдер"</p>
+        <p>- Короткометражный фильм "Семейная связь"</p>
         <p>- "Импульс - шаг в будущее"</p>
         <p>- Короткометражный фильм "Беседа"</p>
         <p>- Короткометражный фильм "Скейт"</p>
-        <p>8:45:</p>
+        <p>12:25:</p>
         <p>- К/Ф "ЭГО"</p>
-        <p>9:10:</p>
+        <p>12:45:</p>
         <p>- "ВЕЛОМАРШРУТ" - Некрасовка, Косино-Ухтомский, Новокосино</p>
-        <p>9:25:</p>
-        <p>- Дом забытых вещей</p>
-        <p>9:35:</p>
+        <p>13:00:</p>
         <p>- К/Ф "Карачун"</p>
-        <p>10:15:</p>
-        <p>Продолжение вещания</p>
-        <p>10:40:</p>
-        <p>- Дом забытых вещей</p>
-        <p>11:40:</p>
-        <p>- Чудеса случаются</p>
         <p>13:25:</p>
-        <p>- Страйдер (18+)</p>
-        <p>13:35:</p>
-        <p>- Страйдер 2 (18+)</p>
-        <p>13:45:</p>
+        <p>- Дом забытых вещей</p>
+        <p>С 13:40:</p>
+        <p>- Фильм "Чудеса случаются"</p>
+        <p>- Короткометражный фильм "Страйдер"</p>
+        <p>- Короткометражный фильм "Семейная связь"</p>
+        <p>- "Импульс - шаг в будущее"</p>
+        <p>- Короткометражный фильм "Беседа"</p>
+        <p>- Короткометражный фильм "Скейт"</p>
+        <p>15:25:</p>
         <p>- Семейная связь</p>
-        <p>15:40:</p>
-        <p>- Дом забытых вещей</p>
-        <p>15:55:</p>
-        <p>- Там, где горы встречаются с морем</p>
-        <p>16:30:</p>
-        <p>Продолжение вещания</p>
-        <p>17:35:</p>
-        <p>- Импульс - шаг в будущее</p>
-        <p>18:30:</p>
-        <p>- Страйдер (18+)</p>
+        <p>16:15:</p>
+        <p>- К/ф "Черепаха"</p>
+        <p>18:15:</p>
+        <p>- К/Ф "ЭГО"</p>
         <p>18:40:</p>
-        <p>- Страйдер 2 (18+)</p>
-        <p>19:50:</p>
-        <p>Там, где горы встречаются с морем</p>
-        <p>20:30:</p>
         <p>- "ВЕЛОМАРШРУТ" - Некрасовка, Косино-Ухтомский, Новокосино</p>
-        <p>21:05:</p>
+        <p>19:00:</p>
+        <p>- К/Ф "Карачун"</p>
+        <p>19:20:</p>
         <p>- Дом забытых вещей</p>
-        <p>21:15:</p>
+        <p>19:35:</p>
+        <p>- К/ф "Черепаха"</p>
+        <p>С 20:00:</p>
         <p>Продолжение вещания</p>
+        <p>22:10:</p>
+        <p>- Дом забытых вещей</p>
+        <p>23:50:</p>
+        <p>- К/ф "Беседа"</p>
+        <b>Расписание на 26.08.2025</b> 
+        <p>00:45:</p>
+        <p>- "ВЕЛОМАРШРУТ" - Некрасовка, Косино-Ухтомский, Новокосино</p>
+        <p>00:55:</p>
+        <p>Перерыв вещания</p>
 
 
 
