--- a/livetv.html
+++ b/livetv.html
@@ -186,58 +186,8 @@ window.onclick = function(event) {
           <iframe src="https://vk.com/video_ext.php?oid=-214689242&id=456239083&hd=1&autoplay=1" width="640" height="360" allow="encrypted-media; fullscreen; picture-in-picture; screen-wake-lock;" frameborder="0" allowfullscreen></iframe>
      </div>
      <div class="title1">
-        <b>Расписание на 27.08.2025</b>
-        <p>7:00:</p>
-        <p>- Неудачные дубли телепередачи "ВЕЛОМАРШРУТ"</p>
-        <p>7:02:</p>
-        <p>- "ВЕЛОМАРШРУТ" - Некрасовка, Косино-Ухтомский, Новокосино</p>
-        <p>С 7:20:</p>
-        <p>- Фильм "Чудеса случаются"</p>
-        <p>- Короткометражный фильм "Страйдер" (18+)</p>
-        <p>- "Импульс - шаг в будущее"</p>
-        <p>- Короткометражный фильм "Беседа"</p>
-        <p>- Короткометражный фильм "Скейт"</p>
-        <p>8:45:</p>
-        <p>- К/Ф "ЭГО"</p>
-        <p>9:10:</p>
-        <p>- "ВЕЛОМАРШРУТ" - Некрасовка, Косино-Ухтомский, Новокосино</p>
-        <p>9:25:</p>
-        <p>- Дом забытых вещей</p>
-        <p>9:35:</p>
-        <p>- К/Ф "Карачун"</p>
-        <p>10:15:</p>
-        <p>Продолжение вещания</p>
-        <p>10:40:</p>
-        <p>- Дом забытых вещей</p>
-        <p>11:40:</p>
-        <p>- Чудеса случаются</p>
-        <p>13:25:</p>
-        <p>- Страйдер (18+)</p>
-        <p>13:35:</p>
-        <p>- Страйдер 2 (18+)</p>
-        <p>13:45:</p>
-        <p>- Семейная связь</p>
-        <p>15:40:</p>
-        <p>- Дом забытых вещей</p>
-        <p>15:55:</p>
-        <p>- Там, где горы встречаются с морем</p>
-        <p>16:30:</p>
-        <p>Продолжение вещания</p>
-        <p>17:35:</p>
-        <p>- Импульс - шаг в будущее</p>
-        <p>18:30:</p>
-        <p>- Страйдер (18+)</p>
-        <p>18:40:</p>
-        <p>- Страйдер 2 (18+)</p>
-        <p>19:50:</p>
-        <p>Там, где горы встречаются с морем</p>
-        <p>20:30:</p>
-        <p>- "ВЕЛОМАРШРУТ" - Некрасовка, Косино-Ухтомский, Новокосино</p>
-        <p>21:05:</p>
-        <p>- Дом забытых вещей</p>
-        <p>21:15:</p>
-        <p>Продолжение вещания</p>
-        <!-- <p>10:00:</p>
+        <b>Расписание на 28.08.2025</b>
+        <p>10:00:</p>
         <p>- Дом забытых вещей</p>
         <p>10:15:</p>
         <p>- "ВЕЛОМАРШРУТ" - Некрасовка, Косино-Ухтомский, Новокосино</p>
@@ -289,7 +239,7 @@ window.onclick = function(event) {
         <p>00:45:</p>
         <p>- "ВЕЛОМАРШРУТ" - Некрасовка, Косино-Ухтомский, Новокосино</p>
         <p>00:55:</p>
-        <p>Перерыв вещания</p> -->
+        <p>Перерыв вещания</p>
 
    </div>
 </div>
