--- a/livetv.html
+++ b/livetv.html
@@ -158,56 +158,60 @@ window.onclick = function(event) {
           <iframe src="https://vk.com/video_ext.php?oid=-214689242&id=456239083&hd=1&autoplay=1" width="640" height="360" allow="encrypted-media; fullscreen; picture-in-picture; screen-wake-lock;" frameborder="0" allowfullscreen></iframe>
      </div>
      <div class="title1">
-        <b>Расписание на 10.09.2025</b> 
-        <p>8:00:</p>
-        <p>- Неудачные дубли телепередачи "ВЕЛОМАРШРУТ"</p>
-        <p>8:02:</p>
+        <b>Расписание на 11.09.2025</b> 
+        <p>8:00 МСК:</p>
+        <p>- Дом забытых вещей</p>
+        <p>8:15 МСК:</p>
         <p>- "ВЕЛОМАРШРУТ" - Некрасовка, Косино-Ухтомский, Новокосино</p>
-        <p>С 8:20:</p>
+        <p>8:35 МСК:</p>
+        <p>- К/ф "Черепаха"</p>
+        <p>С 9:00 МСК:</p>
         <p>- Фильм "Чудеса случаются"</p>
-        <p>- Короткометражный фильм "Страйдер" (18+)</p>
+        <p>- Короткометражный фильм "Страйдер"</p>
+        <p>- Короткометражный фильм "Семейная связь"</p>
         <p>- "Импульс - шаг в будущее"</p>
         <p>- Короткометражный фильм "Беседа"</p>
         <p>- Короткометражный фильм "Скейт"</p>
-        <p>9:45:</p>
+        <p>10:25 МСК:</p>
         <p>- К/Ф "ЭГО"</p>
-        <p>10:10:</p>
+        <p>10:45 МСК:</p>
         <p>- "ВЕЛОМАРШРУТ" - Некрасовка, Косино-Ухтомский, Новокосино</p>
-        <p>10:25:</p>
-        <p>- Дом забытых вещей</p>
-        <p>10:35:</p>
+        <p>11:00 МСК:</p>
         <p>- К/Ф "Карачун"</p>
-        <p>11:15:</p>
-        <p>Продолжение вещания</p>
-        <p>11:40:</p>
+        <p>11:25 МСК:</p>
         <p>- Дом забытых вещей</p>
-        <p>12:40:</p>
-        <p>- Чудеса случаются</p>
-        <p>14:25:</p>
-        <p>- Страйдер (18+)</p>
-        <p>14:35:</p>
-        <p>- Страйдер 2 (18+)</p>
-        <p>14:45:</p>
+        <p>С 11:40 МСК:</p>
+        <p>- Фильм "Чудеса случаются"</p>
+        <p>- Короткометражный фильм "Страйдер"</p>
+        <p>- Короткометражный фильм "Семейная связь"</p>
+        <p>- "Импульс - шаг в будущее"</p>
+        <p>- Короткометражный фильм "Беседа"</p>
+        <p>- Короткометражный фильм "Скейт"</p>
+        <p>13:25 МСК:</p>
         <p>- Семейная связь</p>
-        <p>16:40:</p>
-        <p>- Дом забытых вещей</p>
-        <p>16:55:</p>
-        <p>- Там, где горы встречаются с морем</p>
-        <p>17:30:</p>
-        <p>Продолжение вещания</p>
-        <p>18:35:</p>
-        <p>- Импульс - шаг в будущее</p>
-        <p>19:30:</p>
-        <p>- Страйдер (18+)</p>
-        <p>19:40:</p>
-        <p>- Страйдер 2 (18+)</p>
-        <p>20:50:</p>
-        <p>Там, где горы встречаются с морем</p>
-        <p>21:30:</p>
+        <p>14:15 МСК:</p>
+        <p>- К/ф "Черепаха"</p>
+        <p>16:15 МСК:</p>
+        <p>- К/Ф "ЭГО"</p>
+        <p>16:40 МСК:</p>
         <p>- "ВЕЛОМАРШРУТ" - Некрасовка, Косино-Ухтомский, Новокосино</p>
-        <p>22:05:</p>
+        <p>17:00 МСК:</p>
+        <p>- К/Ф "Карачун"</p>
+        <p>17:20 МСК:</p>
         <p>- Дом забытых вещей</p>
-        <p>22:15:</p>
+        <p>17:35 МСК:</p>
+        <p>- К/ф "Черепаха"</p>
+        <p>С 18:00 МСК:</p>
+        <p>Продолжение вещания</p>
+        <p>20:10 МСК:</p>
+        <p>- Дом забытых вещей</p>
+        <p>21:50 МСК:</p>
+        <p>- К/ф "Беседа"</p>
+        <p>22:36 МСК:</p>
+        <p>- "ВЕЛОМАРШРУТ" - Некрасовка, Косино-Ухтомский, Новокосино</p>
+        <p>23:15 МСК:</p>
+        <p>- Короткометражный фильм "Семейная связь"</p>
+        <p>С 23:30 МСК:</p>
         <p>Продолжение вещания</p>
         <!-- <p>10:00:</p>
         <p>- Дом забытых вещей</p>
