--- a/index.html
+++ b/index.html
@@ -163,48 +163,54 @@ window.onclick = function(event) {
 
 </div>
 <div class="title1">
-        <b>Расписание на 27.10.2025</b>
-        <p>9:00:</p>
+        <b>Расписание на 29.10.2025</b>
+        <p>8:00:</p>
         <p>- Дом забытых вещей</p>
-        <p>9:15:</p>
-        <p>- "ВЕЛОМАРШРУТ" - Некрасовка, Косино-Ухтомский, Новокосино</p>
-        <p>11:25:</p>
+        <p>8:35:</p>
+        <p>- К/ф Черепаха</p>
+        <p>10:25:</p>
         <p>- К/Ф ЭГО</p>
-        <p>11:45:</p>
+        <p>10:45:</p>
         <p>- ВЕЛОМАРШРУТ - Некрасовка, Косино-Ухтомский, Новокосино</p>
-        <p>12:00:</p>
+        <p>11:00:</p>
         <p>- К/Ф Карачун</p>
-        <p>12:25:</p>
+        <p>11:25:</p>
         <p>- Дом забытых вещей</p>
-        <p>С 12:40:</p>
+        <p>С 11:40:</p>
         <p>- Фильм Чудеса случаются</p>
         <p>- К/Ф Страйдер</p>
         <p>- К/Ф Семейная связь</p>
         <p>- Импульс - шаг в будущее</p>
         <p>- К/Ф Беседа</p>
         <p>- К/Ф Скейт</p>
-        <p>14:25:</p>
+        <p>13:25:</p>
         <p>- Семейная связь</p>
-        <p>15:15:</p>
+        <p>14:15:</p>
         <p>- К/ф Черепаха</p>
-        <p>17:15:</p>
+        <p>16:15:</p>
         <p>- К/Ф ЭГО</p>
-        <p>17:40:</p>
+        <p>16:40:</p>
         <p>- ВЕЛОМАРШРУТ - Некрасовка, Косино-Ухтомский, Новокосино</p>
-        <p>18:00:</p>
+        <p>17:00:</p>
         <p>- К/Ф Карачун</p>
-        <p>18:20:</p>
+        <p>17:20:</p>
         <p>- Дом забытых вещей</p>
-        <p>18:35:</p>
+        <p>17:35:</p>
         <p>- К/ф Черепаха</p>
-        <p>С 19:00:</p>
+        <p>С 18:00:</p>
         <p>Продолжение вещания</p>
-        <p>21:10:</p>
+        <p>20:10:</p>
+        <p>- Там, где море встречается с морем <mark>ПО СУББОТАМ</mark></p>
+        <p>20:45:</p>
         <p>- Дом забытых вещей</p>
-        <p>22:50:</p>
+        <p>22:00:</p>
         <p>- К/ф Беседа</p>
-        <p>23:36:</p>
+        <p>23:00:</p>
         <p>- ВЕЛОМАРШРУТ - Некрасовка, Косино-Ухтомский, Новокосино</p>
+        <p>23:15:</p>
+        <p>- Короткометражный фильм Семейная связь</p>
+        <p>С 23:30:</p>
+        <p>Продолжение вещания</p>
 
 
 <!-- <div class="photo"><img src="/theme/images/Rpr29qovqzc.jpg"></div> -->
@@ -223,12 +229,12 @@ window.onclick = function(event) {
 			<p>5106 2180 3937 8336</p> -->
 		</div>
 			<iframe class="ya" src="https://yandex.ru/sprav/widget/rating-badge/231632381437?type=rating&theme=dark" width="300" height="50" frameborder="0"></iframe>
-		<div class="title2"><p>Редакция: rayka_and_layka-tv@ro.ru</p>
-			<p>По всем вопросам: red@ral-tv.ru</p>
+		<div class="title2"><p>Редакция: red@ral-tv.ru</p>
+			<p>По всем вопросам: rayka_and_layka-tv@ro.ru</p>
 		</div>
 		<div class="footer2">
 		     <div class="sob">
-		          <a href=""><img src="/theme/images/LetoRaL2025.png"></a>
+		          <a href=""><img src="/theme/images/Logorebb.png"></a>
 		     </div>
 		    <div class="contein3"><b>© ИПТВ «Райка and Лайка», 2025</b>
 		    	<p>.</p></div>
