--- a/tele-video.html
+++ b/tele-video.html
@@ -87,34 +87,6 @@
 		}
 	</style>
 
-<!-- Принятие куки -->
-<!-- <div class="cookie_notice">
-    Этот сайт использует файлы cookies и сервисы сбора технических данных посетителей для обеспечения работоспособности и улучшения качества обслуживания. Продолжая использовать наш сайт, вы автоматически соглашаетесь с использованием данных технологий.
-    <div>
-        <a class="cookie_btn" id="cookie_close" href="#close">Согласиться</a>
-        <a class="cookie_btn" href="/politica">Политика конфиденциальности</a>
-    </div>
-</div>
-<script>
-function getCookie(name) {
-    let matches = document.cookie.match(new RegExp(
-    "(?:^|; )" + name.replace(/([\.$?*|{}\(\)\[\]\\\/\+^])/g, '\\$1') + "=([^;]*)"
-    ));
-    return matches ? decodeURIComponent(matches[1]) : undefined;
-}
-let cookiecook = getCookie("cookiecook"),
-cookiewin = document.getElementsByClassName('cookie_notice')[0];    
-if (cookiecook != "no") {
-    cookiewin.style.display="block"; 
-    document.getElementById("cookie_close").addEventListener("click", function(){
-        cookiewin.style.display="none";    
-        let date = new Date;
-        date.setDate(date.getDate() + 1);    
-        document.cookie = "cookiecook=no; path=/; expires=" + date.toUTCString();               
-    });
-}
-</script> -->
-<!-- Принятие куки -->
 </head>
 <body>
 	<div class="container">
@@ -202,15 +174,17 @@ window.onclick = function(event) {
 			<p>5106 2180 3937 8336</p> -->
 		</div>
 			<iframe class="ya" src="https://yandex.ru/sprav/widget/rating-badge/231632381437?type=rating&theme=dark" width="300" height="50" frameborder="0"></iframe>
-		<div class="title2"><p>Редакция: rayka_and_layka-tv@ro.ru</p>
-			<p>По всем вопросам: red@ral-tv.ru</p>
+		<div class="title2"><p>Редакция: red@ral-tv.ru</p>
+			<p>По всем вопросам: rayka_and_layka-tv@ro.ru</p>
 		</div>
 		<div class="footer2">
 		     <div class="sob">
-		          <a href=""><img src="/theme/images/LetoRaL2025.png"></a>
+		          <a href=""><img src="/theme/images/Logorebb.png"></a>
 		     </div>
 		    <div class="contein3"><b>© ИПТВ «Райка and Лайка», 2025</b>
 		    	<p>.</p></div>
 		</div>
 	</div>
 </html>
+
+
