--- a/index.html
+++ b/index.html
@@ -163,11 +163,20 @@ window.onclick = function(event) {
 
 </div>
 <div class="title1">
-        <b>Расписание на 29.10.2025</b>
+        <b>Расписание на 30.10.2025</b>
         <p>8:00:</p>
         <p>- Дом забытых вещей</p>
+        <p>8:15:</p>
+        <p>- "ВЕЛОМАРШРУТ" - Некрасовка, Косино-Ухтомский, Новокосино</p>
         <p>8:35:</p>
         <p>- К/ф Черепаха</p>
+        <p>С 9:00:</p>
+        <p>- Фильм Чудеса случаются</p>
+        <p>- К/Ф Страйдер</p>
+        <p>- К/Ф Семейная связь</p>
+        <p>- Импульс - шаг в будущее</p>
+        <p>- К/Ф Беседа</p>
+        <p>- К/Ф Скейт</p>
         <p>10:25:</p>
         <p>- К/Ф ЭГО</p>
         <p>10:45:</p>
@@ -200,12 +209,10 @@ window.onclick = function(event) {
         <p>С 18:00:</p>
         <p>Продолжение вещания</p>
         <p>20:10:</p>
-        <p>- Там, где море встречается с морем <mark>ПО СУББОТАМ</mark></p>
-        <p>20:45:</p>
         <p>- Дом забытых вещей</p>
-        <p>22:00:</p>
+        <p>21:50:</p>
         <p>- К/ф Беседа</p>
-        <p>23:00:</p>
+        <p>22:36:</p>
         <p>- ВЕЛОМАРШРУТ - Некрасовка, Косино-Ухтомский, Новокосино</p>
         <p>23:15:</p>
         <p>- Короткометражный фильм Семейная связь</p>
