--- a/index.html
+++ b/index.html
@@ -163,7 +163,14 @@ window.onclick = function(event) {
 
 </div>
 <div class="title1">
-        <b>Расписание на 31.10.2025</b>
+        <b>Расписание на 01.11.2025</b>
+        <p>С 8:00:</p>
+        <p>- Фильм Чудеса случаются</p>
+        <p>- К/Ф Страйдер</p>
+        <p>- К/Ф Семейная связь</p>
+        <p>- Импульс - шаг в будущее</p>
+        <p>- К/Ф Беседа</p>
+        <p>- К/Ф Скейт</p>
         <p>9:25:</p>
         <p>- К/Ф ЭГО</p>
         <p>9:45:</p>
@@ -196,7 +203,7 @@ window.onclick = function(event) {
         <p>С 17:00:</p>
         <p>Продолжение вещания</p>
         <p>19:10:</p>
-        <p>- Там, где море встречается с морем <mark>ПО ПЯТНИЦАМ</mark></p>
+        <p>- Там, где море встречается с морем <mark>ПО СУББОТАМ</mark></p>
         <p>19:45:</p>
         <p>- Дом забытых вещей</p>
         <p>21:00:</p>
