--- a/livetv.html
+++ b/livetv.html
@@ -158,7 +158,14 @@ window.onclick = function(event) {
           <iframe src="https://vk.com/video_ext.php?oid=-214689242&id=456239083&hd=1&autoplay=1" width="640" height="360" allow="encrypted-media; fullscreen; picture-in-picture; screen-wake-lock;" frameborder="0" allowfullscreen></iframe>
      </div>
      <div class="title1">
-        <b>Расписание на 31.10.2025</b>
+        <b>Расписание на 01.11.2025</b>
+        <p>С 8:00:</p>
+        <p>- Фильм Чудеса случаются</p>
+        <p>- К/Ф Страйдер</p>
+        <p>- К/Ф Семейная связь</p>
+        <p>- Импульс - шаг в будущее</p>
+        <p>- К/Ф Беседа</p>
+        <p>- К/Ф Скейт</p>
         <p>9:25:</p>
         <p>- К/Ф ЭГО</p>
         <p>9:45:</p>
@@ -191,7 +198,7 @@ window.onclick = function(event) {
         <p>С 17:00:</p>
         <p>Продолжение вещания</p>
         <p>19:10:</p>
-        <p>- Там, где море встречается с морем <mark>ПО ПЯТНИЦАМ</mark></p>
+        <p>- Там, где море встречается с морем <mark>ПО СУББОТАМ</mark></p>
         <p>19:45:</p>
         <p>- Дом забытых вещей</p>
         <p>21:00:</p>
