--- a/index.html
+++ b/index.html
@@ -163,7 +163,7 @@ window.onclick = function(event) {
 
 </div>
 <div class="title1">
-        <b>Расписание 27.12.2025</b>
+        <b>Расписание 28.12.2025</b>
         <p>10:45:</p>
         <p>- ВЕЛОМАРШРУТ - Некрасовка, Косино-Ухтомский, Новокосино</p>
         <p>11:00:</p>
@@ -196,7 +196,7 @@ window.onclick = function(event) {
         <p>18:30:</p>
         <p>- К/ф Страйдер 2 (18+)</p>
         <p>20:20:</p>
-        <p>- Там, где море встречается с морем <mark>ПО СУББОТАМ</mark></p>
+        <p>- Там, где море встречается с морем</p>
         <p>20:55:</p>
         <p>- Дом забытых вещей</p>
         <p>22:10:</p>
