--- a/livetv.html
+++ b/livetv.html
@@ -158,7 +158,7 @@ window.onclick = function(event) {
           <iframe src="https://vk.com/video_ext.php?oid=-214689242&id=456239083&hd=1&autoplay=1" width="640" height="360" allow="encrypted-media; fullscreen; picture-in-picture; screen-wake-lock;" frameborder="0" allowfullscreen></iframe>
      </div>
      <div class="title1">
-        <b>Расписание 27.12.2025</b>
+        <b>Расписание 28.12.2025</b>
         <p>10:45:</p>
         <p>- ВЕЛОМАРШРУТ - Некрасовка, Косино-Ухтомский, Новокосино</p>
         <p>11:00:</p>
@@ -191,7 +191,7 @@ window.onclick = function(event) {
         <p>18:30:</p>
         <p>- К/ф Страйдер 2 (18+)</p>
         <p>20:20:</p>
-        <p>- Там, где море встречается с морем <mark>ПО СУББОТАМ</mark></p>
+        <p>- Там, где море встречается с морем</p>
         <p>20:55:</p>
         <p>- Дом забытых вещей</p>
         <p>22:10:</p>
