--- a/index.html
+++ b/index.html
@@ -131,7 +131,7 @@ window.onclick = function(event) {
 
 <div class="header">
 	<div class="emblem">
-		<img src="/theme/images/Logoreb.png">
+		<img src="/theme/images/B.png">
 	</div>
 	<div class="title">
 		<p>Интернет-телеканал «Райка and Лайка»</p>
