--- a/yauchastnik.html
+++ b/yauchastnik.html
@@ -92,7 +92,7 @@
 	<div class="container">
 		<div class="buttons">
 			<div class="logoo">
-				<img src="/theme/images/Logoreb.png">
+				<img src="/theme/images/B.png">
 				<p>Интернет-телеканал «Райка and Лайка»</p>
 			  
 			</div>
