--- a/Temat.html
+++ b/Temat.html
@@ -23,7 +23,7 @@
 	<meta charset="utf-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<meta name="yandex-verification" content="d6393e3431b0c435" />
-	<title>"Райка and Лайка" - телеканал - Тематические телепередачи</title>
+	<title>Тематические телепередачи | Райка интернет-телеканал</title>
 
 	<link rel="icon" type="image/x-icon" href="/favicon.ico">
 	<link rel="preconnect" href="https://fonts.googleapis.com">
@@ -93,7 +93,7 @@
 		<div class="buttons">
 			<div class="logoo">
 				<img src="/theme/images/B.png">
-				<p>Интернет-телеканал «Райка and Лайка»</p>
+				<p>Интернет-телеканал «Райка»</p>
 			  
 			</div>
 		</div>
@@ -238,7 +238,7 @@ document.addEventListener('keydown', (e) => {
 		     <div class="sob">
 		          <a href=""><img src="/theme/images/Logorebb.png"></a>
 		     </div>
-		    <div class="contein3"><b>© ИПТВ «Райка and Лайка», 2025</b>
+		    <div class="contein3"><b>© ИПТВ «Райка», 2026</b>
 		    	<p>.</p></div>
 		</div>
 	</div>
