--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
 	<meta charset="utf-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<meta name="yandex-verification" content="d6393e3431b0c435" />
-	<title>Райка and Лайка – интернет-телеканал</title>
+	<title>Райка – интернет-телеканал</title>
 
 	<link rel="icon" type="image/x-icon" href="/favicon.ico">
 	<link rel="preconnect" href="https://fonts.googleapis.com">
@@ -93,7 +93,7 @@
 		<div class="buttons">
 			<div class="logoo">
 				<img src="/theme/images/B.png">
-				<p>Интернет-телеканал «Райка and Лайка»</p>
+				<p>Интернет-телеканал «Райка»</p>
 			  
 			</div>
 		</div>
@@ -134,11 +134,13 @@ window.onclick = function(event) {
 		<img src="/theme/images/B.png">
 	</div>
 	<div class="title">
-		<p>Интернет-телеканал «Райка and Лайка»</p>
+		<p>Интернет-телеканал «Райка»</p>
 	</div>
 	<div class="description">
-		<p>ИПТВ «Райка and Лайка» - это телеканал, который вещает только по сети интернет.</p>
-		<p>Мы вещаем разные телепередачи, короткометражные фильмы, шоу и ведём прямые эфиры с разных мероприятий!</p>
+		<p>ИПТВ «Райка» – интернет-телеканал и цифровая экосистема.</p>
+                <p>Мы вещаем для вас в интернете на собственной платформе.</p>
+		<p>В программу вещания входят телепередачи собственного производства, короткометражные и полнометражные фильмы и многое другое.</p>
+                <p>Мы создаём новое представление о телевидении, и впереди у нас много нового!</p>
 	</div>
 <div class="title">
 	<a href="https://vk.com/rayka_and_layka_new" target="_blank"><i class="demo-icon icon-link-ext">&#xf08e;</i>Сообщество ВК</a><br>
@@ -163,56 +165,56 @@ window.onclick = function(event) {
 
 </div>
 <div class="title1">
-        <b>Расписание 17.01.2026</b>
-        <p>10:00:</p>
+        <b>Расписание 21.01.2026</b>
+        <p>8:00:</p>
         <p>- Дом забытых вещей</p>
-        <p>10:31:</p>
+        <p>8:31:</p>
         <p>- К/ф Черепаха</p>
-        <p>10:55:</p>
+        <p>8:55:</p>
         <p>- Чудеса случаются</p>
-        <p>12:20:</p>
+        <p>10:20:</p>
         <p>- К/Ф ЭГО</p>
-        <p>12:45:</p>
+        <p>10:45:</p>
         <p>- ВЕЛОМАРШРУТ - Некрасовка, Косино-Ухтомский, Новокосино</p>
-        <p>13:00:</p>
+        <p>11:00:</p>
         <p>- К/Ф Карачун</p>
-        <p>13:30:</p>
+        <p>11:30:</p>
         <p>- Дом забытых вещей</p>
-        <p>13:40:</p>
+        <p>11:40:</p>
         <p>- Аука (18+)</p>
-        <p>14:30:</p>
+        <p>12:30:</p>
         <p>- К/ф ПОМНИ!</p>
-        <p>14:50:</p>
+        <p>12:50:</p>
         <p>- К/ф Черепаха</p>
-        <p>16:55:</p>
+        <p>14:55:</p>
         <p>- К/ф Беседа</p>
-        <p>17:05:</p>
+        <p>15:05:</p>
         <p>- Реальность полёта</p>
-        <p>17:48:</p>
+        <p>15:48:</p>
         <p>- К/ф Черепаха</p>
-        <p>18:26:</p>
+        <p>16:26:</p>
         <p>- Страйдер (18+)</p>
-        <p>18:36:</p>
+        <p>16:36:</p>
         <p>- Страйдер-2 (18+)</p>
-        <p>19:35:</p>
+        <p>17:35:</p>
         <p>- Семейная связь</p>
-        <p>19:51:</p>
+        <p>17:51:</p>
         <p>- К/ф ПОМНИ!</p>
-        <p>20:00:</p>
+        <p>18:00:</p>
         <p>- Аука (18+)</p>
-        <p>20:15:</p>
+        <p>18:15:</p>
         <p>- Реальность полёта</p>
-        <p>20:55:</p>
+        <p>18:55:</p>
         <p>- К/ф ПОМНИ!</p>
-        <p>21:10:</p>
+        <p>19:10:</p>
         <p>- К/ф ЭГО</p>
-        <p>21:35:</p>
+        <p>19:35:</p>
         <p>- ВЕЛОМАРШРУТ - Некрасовка, Косино-Ухтомский, Новокосино</p>
-        <p>21:55:</p>
+        <p>19:55:</p>
         <p>- К/Ф Карачун</p>
-        <p>22:33:</p>
+        <p>20:33:</p>
         <p>- К/Ф Черепаха</p>
-        <p>23:00:</p>
+        <p>21:00:</p>
         <p>- К/Ф Скейт</p>
 
 
@@ -239,7 +241,7 @@ window.onclick = function(event) {
 		     <div class="sob">
 		          <a href=""><img src="/theme/images/Logorebb.png"></a>
 		     </div>
-		    <div class="contein3"><b>© ИПТВ «Райка and Лайка», 2026</b>
+		    <div class="contein3"><b>© ИПТВ «Райка», 2026</b>
 		    	<p>.</p></div>
 		</div>
 	</div>
