--- a/politica.html
+++ b/politica.html
@@ -93,7 +93,7 @@
 		<div class="buttons">
 			<div class="logoo">
 				<img src="/theme/images/B.png">
-				<p>Интернет-телеканал «Райка and Лайка»</p>
+				<p>Интернет-телеканал «Райка»</p>
 			  
 			</div>
 		</div>
@@ -256,7 +256,7 @@ window.onclick = function(event) {
 		     <div class="sob">
 		          <a href=""><img src="/theme/images/Logorebb.png"></a>
 		     </div>
-		    <div class="contein3"><b>© ИПТВ «Райка and Лайка», 2025</b>
+		    <div class="contein3"><b>© ИПТВ «Райка», 2026</b>
 		    	<p>.</p></div>
 		</div>
 	</div>
