--- a/livetv.html
+++ b/livetv.html
@@ -158,54 +158,56 @@ window.onclick = function(event) {
           <iframe src="https://vk.com/video_ext.php?oid=-214689242&id=456239083&hd=1&autoplay=1" width="640" height="360" allow="encrypted-media; fullscreen; picture-in-picture; screen-wake-lock;" frameborder="0" allowfullscreen></iframe>
      </div>
      <div class="title1">
-        <b>Расписание 21.01.2026</b>
-        <p>8:31:</p>
-        <p>- К/ф Черепаха</p>
-        <p>8:55:</p>
-        <p>- Чудеса случаются</p>
-        <p>10:20:</p>
-        <p>- К/Ф ЭГО</p>
-        <p>10:45:</p>
-        <p>- ВЕЛОМАРШРУТ - Некрасовка, Косино-Ухтомский, Новокосино</p>
-        <p>11:00:</p>
-        <p>- К/Ф Карачун</p>
-        <p>11:30:</p>
+        <b>Расписание 25.01.2026</b>
+        <p>10:00:</p>
         <p>- Дом забытых вещей</p>
-        <p>11:40:</p>
-        <p>- Аука (18+)</p>
-        <p>12:30:</p>
-        <p>- К/ф ПОМНИ!</p>
-        <p>12:50:</p>
+        <p>10:31:</p>
         <p>- К/ф Черепаха</p>
-        <p>14:55:</p>
-        <p>- К/ф Беседа</p>
-        <p>15:05:</p>
-        <p>- Реальность полёта</p>
-        <p>15:48:</p>
-        <p>- К/ф Черепаха</p>
-        <p>16:26:</p>
-        <p>- Страйдер (18+)</p>
-        <p>16:36:</p>
-        <p>- Страйдер-2 (18+)</p>
-        <p>17:35:</p>
-        <p>- Семейная связь</p>
-        <p>17:51:</p>
-        <p>- К/ф ПОМНИ!</p>
-        <p>18:00:</p>
-        <p>- Аука (18+)</p>
-        <p>18:15:</p>
-        <p>- Реальность полёта</p>
-        <p>18:55:</p>
-        <p>- К/ф ПОМНИ!</p>
-        <p>19:10:</p>
-        <p>- К/ф ЭГО</p>
-        <p>19:35:</p>
+        <p>10:55:</p>
+        <p>- Чудеса случаются</p>
+        <p>12:20:</p>
+        <p>- К/Ф ЭГО</p>
+        <p>12:45:</p>
         <p>- ВЕЛОМАРШРУТ - Некрасовка, Косино-Ухтомский, Новокосино</p>
-        <p>19:55:</p>
+        <p>13:00:</p>
         <p>- К/Ф Карачун</p>
-        <p>20:33:</p>
+        <p>13:30:</p>
+        <p>- Дом забытых вещей</p>
+        <p>13:40:</p>
+        <p>- Аука (18+)</p>
+        <p>14:30:</p>
+        <p>- К/ф ПОМНИ!</p>
+        <p>14:50:</p>
+        <p>- К/ф Черепаха</p>
+        <p>16:55:</p>
+        <p>- К/ф Беседа</p>
+        <p>17:05:</p>
+        <p>- Реальность полёта</p>
+        <p>17:48:</p>
+        <p>- К/ф Черепаха</p>
+        <p>18:26:</p>
+        <p>- Страйдер (18+)</p>
+        <p>18:36:</p>
+        <p>- Страйдер-2 (18+)</p>
+        <p>19:35:</p>
+        <p>- Семейная связь</p>
+        <p>19:51:</p>
+        <p>- К/ф ПОМНИ!</p>
+        <p>20:00:</p>
+        <p>- Аука (18+)</p>
+        <p>20:15:</p>
+        <p>- Реальность полёта</p>
+        <p>20:55:</p>
+        <p>- К/ф ПОМНИ!</p>
+        <p>21:10:</p>
+        <p>- К/ф ЭГО</p>
+        <p>21:35:</p>
+        <p>- ВЕЛОМАРШРУТ - Некрасовка, Косино-Ухтомский, Новокосино</p>
+        <p>21:55:</p>
+        <p>- К/Ф Карачун</p>
+        <p>22:33:</p>
         <p>- К/Ф Черепаха</p>
-        <p>21:00:</p>
+        <p>23:00:</p>
         <p>- К/Ф Скейт</p>
 
    </div>
