--- a/livetv.html
+++ b/livetv.html
@@ -158,60 +158,59 @@ window.onclick = function(event) {
           <iframe src="https://vk.com/video_ext.php?oid=-214689242&id=456239083&hd=1&autoplay=1" width="640" height="360" allow="encrypted-media; fullscreen; picture-in-picture; screen-wake-lock;" frameborder="0" allowfullscreen></iframe>
      </div>
      <div class="title1">
-        <b>Расписание 04.02.2026</b>
-        <p>8:00:</p>
+        <b>Расписание 07.02.2026</b>
+        <p>9:00:</p>
         <p>- Дом забытых вещей</p>
-        <p>8:15:</p>
-        <p>- "ВЕЛОМАРШРУТ" - Некрасовка, Косино-Ухтомский, Новокосино</p>
-        <p>8:35:</p>
+        <p>9:15:</p>
+        <p>- ВЕЛОМАРШРУТ - Некрасовка, Косино-Ухтомский, Новокосино</p>
+        <p>9:35:</p>
         <p>- К/ф Черепаха</p>
-        <p>С 9:00:</p>
+        <p>С 10:00:</p>
         <p>- Фильм Чудеса случаются</p>
         <p>- К/Ф Страйдер</p>
         <p>- К/Ф Семейная связь</p>
         <p>- Импульс - шаг в будущее</p>
         <p>- К/Ф Беседа</p>
         <p>- К/Ф Скейт</p>
-        <p>10:25:</p>
-        <p>- К/Ф ЭГО</p>
-        <p>10:45:</p>
-        <p>- ВЕЛОМАРШРУТ - Некрасовка, Косино-Ухтомский, Новокосино</p>
-        <p>11:00:</p>
-        <p>- К/Ф Карачун</p>
         <p>11:25:</p>
+        <p>- К/Ф ЭГО</p>
+        <p>11:45:</p>
+        <p>- ВЕЛОМАРШРУТ - Некрасовка, Косино-Ухтомский, Новокосино</p>
+        <p>12:00:</p>
+        <p>- К/Ф Карачун</p>
+        <p>12:25:</p>
         <p>- Дом забытых вещей</p>
-        <p>С 11:40:</p>
+        <p>С 12:40:</p>
         <p>- Фильм Чудеса случаются</p>
         <p>- К/Ф Страйдер</p>
         <p>- К/Ф Семейная связь</p>
         <p>- Импульс - шаг в будущее</p>
         <p>- К/Ф Беседа</p>
         <p>- К/Ф Скейт</p>
-        <p>13:25:</p>
+        <p>14:25:</p>
         <p>- Семейная связь</p>
-        <p>14:15:</p>
+        <p>15:15:</p>
         <p>- К/ф Черепаха</p>
-        <p>16:15:</p>
+        <p>17:15:</p>
         <p>- К/Ф ЭГО</p>
-        <p>16:40:</p>
+        <p>17:40:</p>
         <p>- ВЕЛОМАРШРУТ - Некрасовка, Косино-Ухтомский, Новокосино</p>
-        <p>17:00:</p>
+        <p>18:00:</p>
         <p>- К/Ф Карачун</p>
-        <p>17:20:</p>
+        <p>18:20:</p>
         <p>- Дом забытых вещей</p>
-        <p>17:35:</p>
+        <p>18:35:</p>
         <p>- К/ф Черепаха</p>
-        <p>С 18:00:</p>
-        <p>Продолжение вещания</p>
-        <p>20:10:</p>
+        <p>19:20:</p>
+        <p>-К/ф Страйдер (18+)</p>
+        <p>19:30:</p>
+        <p>-К/ф Страйдер 2 (18+)</p>
+        <p>21:20:</p>
+        <p>- Там, где море встречается с морем <mark>ПО СУББОТАМ</mark></p>
+        <p>21:55:</p>
         <p>- Дом забытых вещей</p>
-        <p>21:50:</p>
+        <p>23:10:</p>
         <p>- К/ф Беседа</p>
-        <p>22:36:</p>
-        <p>- ВЕЛОМАРШРУТ - Некрасовка, Косино-Ухтомский, Новокосино</p>
-        <p>23:15:</p>
-        <p>- Короткометражный фильм Семейная связь</p>
-        <p>С 23:30:</p>
         <!-- <p>8:00:</p>
         <p>- Дом забытых вещей</p>
         <p>8:31:</p>
